--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  flutter_webview_plugin: ^0.3.10+1
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,11 @@ flutter:
     - images/swiper1.jpg
     - images/swiper2.jpg
     - images/swiper3.jpg
+
+    - images/caifu1.jpg
+    - images/caifu2.jpg
+    - images/caifu3.jpg
+
     - images/choujiang.png
     - images/choujiang2.png
     - images/ditu.png
