--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter_swiper: ^1.1.6
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   flutter_webview_plugin: ^0.3.10+1
+  flutter_svg: ^0.17.2
 
 dev_dependencies:
   flutter_test:
@@ -64,3 +65,30 @@ flutter:
     - images/wsyh.png
     - images/gongyi.png
     - images/kefu.png
+
+    - assets/zhangdan.svg
+    - assets/zzc.svg
+    - assets/huiyuan.svg
+    - assets/shangjia.svg
+    - assets/yue.svg
+    - assets/yuebao.svg
+    - assets/huabei.svg
+    - assets/yulibao.svg
+    - assets/yinhangka.svg
+    - assets/zhima.svg
+    - assets/baoxian.svg
+    - assets/xianghu.svg
+    - assets/jiebei.svg
+    - assets/wangshang.svg
+    - assets/gongyi.svg
+    - assets/kfu.svg
+    - assets/choujiang.svg
+    - assets/duihuan.svg
+    - assets/ditu.svg
+    - assets/xinwen.svg
+    - assets/shucai.svg
+    - assets/jiankang.svg
+    - assets/fuwutx.svg
+    - assets/daren.svg
+    - assets/caifu.svg
+    - assets/xinyun.svg
